# ai_ad_ch6

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  EXAMPLES.md  PLAN.md  PROJECT_DESCRIPTION.md  README.md  SCENARIOS.md  USE_CASES.md  docker-compose.yml  go.mod  main.go  requirements.txt  script.py
llm_agent/: .coverage  .env.example  CLAUDE.md  EXAMPLES.md  RAG_DIALOG_MEMORY_TESTING.md  RAG_QUICKSTART.md  RAG_RERANKER_TEST_PLAN.md  RAG_STRUCTURED_OUTPUT_TESTING.md  README.md  SCENARIOS.md  USE_CASE_NOTIFICATION_WATCHER.md  VERIFICATION_CHECKLIST.md  compare_rag.py  index_documents.py  pyproject.toml  rag_eval_questions.md  requirements.txt  research-command.md  research-common.md  research.md  schema-graph.md  test_todo.py
llm_agent/chatbot/: __init__.py  cli.py  config.py  context.py  main.py  mcp_client.py  memory.py  memory_storage.py  models.py  notification_server.py  project_storage.py  reminders_storage.py  storage.py  task_storage.py
llm_agent/dialogues/Alice/: profile.json
llm_agent/dialogues/Igor/: profile.json
llm_agent/dialogues/TestScenario/: profile.json  session_20260306T190452Z_inception_mercury-coder.json
llm_agent/dialogues/default/: profile.json  reminders.json  session_20260309T094710Z_inception_mercury-coder.json  session_20260309T094934Z_inception_mercury-coder.json  session_20260310T194239Z_inception_mercury-coder.json  session_20260311T073451Z_inception_mercury-coder.json  session_20260312T082459Z_inception_mercury-coder.json  session_20260312T084215Z_inception_mercury-coder.json  session_20260312T084720Z_inception_mercury-coder.json  session_20260312T085110Z_inception_mercury-coder.json  session_20260313T064237Z_inception_mercury-coder.json  session_20260313T065340Z_inception_mercury-coder.json  session_20260313T065721Z_inception_mercury-coder.json  session_20260313T070137Z_inception_mercury-coder.json  (+20 more)
llm_agent/rag/: __init__.py  chunking.py  compare.py  index.py  models.py  pipeline.py  retriever.py
llm_agent/rag_index/: compare_report.json  fixed.faiss  fixed_metadata.json  structure.faiss  structure_metadata.json
llm_agent/tests/: conftest.py  test_agent.py  test_cli.py  test_cli_coverage.py  test_config.py  test_context.py  test_context_coverage.py  test_invariant_scenarios.py  test_main.py  test_main_coverage2.py  test_main_helpers.py  test_mcp_client.py  test_mcp_manager.py  test_memory.py  test_memory_storage_coverage.py  test_models.py  test_models_coverage.py  test_notification_server.py  test_profile_plan_integration.py  test_project.py  test_rag_chunking.py  test_rag_commands.py  test_rag_dialog_scenarios.py  test_rag_index.py  test_rag_pipeline.py  test_rag_reranker.py  test_rag_retriever.py  test_rag_structured_output.py  test_rag_structured_output_scenarios.py  test_rag_task_memory_scenarios.py  test_reminders_storage.py  test_storage.py  test_task_cli.py  test_task_models.py  test_task_storage.py  test_task_storage_coverage.py  test_task_transitions.py  test_weather_pdf_scenario.py
(+228 files in other folders)
